Removed headers when exporting with SkCsvRecords